@@ -7,15 +7,14 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import uk.gov.justice.laa.crime.commons.client.RestAPIClient;
-import uk.gov.justice.laa.crime.crowncourt.common.Constants;
 import uk.gov.justice.laa.crime.crowncourt.config.ServicesConfiguration;
 import uk.gov.justice.laa.crime.crowncourt.dto.maatcourtdata.IOJAppealDTO;
 import uk.gov.justice.laa.crime.crowncourt.dto.maatcourtdata.RepOrderCCOutcomeDTO;
 import uk.gov.justice.laa.crime.crowncourt.dto.maatcourtdata.RepOrderDTO;
 import uk.gov.justice.laa.crime.crowncourt.dto.maatcourtdata.UpdateRepOrderRequestDTO;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 @Slf4j
 @Service
@@ -27,58 +26,58 @@ public class MaatCourtDataService {
     private final ServicesConfiguration configuration;
     public static final String RESPONSE_STRING = "Response from Court Data API: {}";
 
-    public IOJAppealDTO getCurrentPassedIOJAppealFromRepId(Integer repId, String laaTransactionId) {
+    public IOJAppealDTO getCurrentPassedIOJAppealFromRepId(Integer repId) {
         IOJAppealDTO response = maatAPIClient.get(
                 new ParameterizedTypeReference<IOJAppealDTO>() {
                 },
                 configuration.getMaatApi().getIojAppealEndpoints().getFindUrl(),
-                Map.of(Constants.LAA_TRANSACTION_ID, laaTransactionId),
+                Collections.emptyMap(),
                 repId
         );
         log.info(RESPONSE_STRING, response);
         return response;
     }
 
-    public RepOrderDTO updateRepOrder(UpdateRepOrderRequestDTO updateRepOrderRequestDTO, String laaTransactionId) {
+    public RepOrderDTO updateRepOrder(UpdateRepOrderRequestDTO updateRepOrderRequestDTO) {
         RepOrderDTO response = maatAPIClient.put(
                 updateRepOrderRequestDTO,
                 new ParameterizedTypeReference<RepOrderDTO>() {
                 },
                 configuration.getMaatApi().getRepOrderEndpoints().getUpdateUrl(),
-                Map.of(Constants.LAA_TRANSACTION_ID, laaTransactionId)
+                Collections.emptyMap()
         );
         log.info(RESPONSE_STRING, response);
         return response;
     }
 
-    public List<RepOrderCCOutcomeDTO> getRepOrderCCOutcomeByRepId(Integer repId, String laaTransactionId) {
+    public List<RepOrderCCOutcomeDTO> getRepOrderCCOutcomeByRepId(Integer repId) {
         List<RepOrderCCOutcomeDTO> response = maatAPIClient.get(
                 new ParameterizedTypeReference<List<RepOrderCCOutcomeDTO>>() {
                 },
                 configuration.getMaatApi().getRepOrderEndpoints().getFindOutcomeUrl(),
-                Map.of(Constants.LAA_TRANSACTION_ID, laaTransactionId),
+                Collections.emptyMap(),
                 repId
         );
         log.info(RESPONSE_STRING, response);
         return response;
     }
 
-    public RepOrderCCOutcomeDTO createOutcome(RepOrderCCOutcomeDTO outcomeDTO, String laaTransactionId) {
+    public RepOrderCCOutcomeDTO createOutcome(RepOrderCCOutcomeDTO outcomeDTO) {
         RepOrderCCOutcomeDTO response = maatAPIClient.post(
                 outcomeDTO,
                 new ParameterizedTypeReference<RepOrderCCOutcomeDTO>() {
                 },
                 configuration.getMaatApi().getRepOrderEndpoints().getCreateOutcomeUrl(),
-                Map.of(Constants.LAA_TRANSACTION_ID, laaTransactionId));
+                Collections.emptyMap()
+        );
         log.info(RESPONSE_STRING, response);
         return response;
     }
 
-    public long outcomeCount(Integer repId, String laaTransactionId) {
-
+    public long outcomeCount(Integer repId) {
         ResponseEntity<Void> response = maatAPIClient.head(
                 configuration.getMaatApi().getRepOrderEndpoints().getFindOutcomeUrl(),
-                Map.of(Constants.LAA_TRANSACTION_ID, laaTransactionId),
+                Collections.emptyMap(),
                 repId
         );
         log.info(RESPONSE_STRING, response);
